imap resource: set the internal date as specified in the mail's header for an APPEND command

Currently, for an APPEND command there is no internal date specified.
Therefore an IMAP server sets the current date/time for an appended
EMail, see http://tools.ietf.org/html/rfc3501#section-6.3.11 .

While this doesn't matter to KMail (it uses the date/time from the
mail's header anyway), other clients (especially Webmail) may show/sort
by this internal date.

This patch sets the internal date to the date/time as specified in the
mail's header.

BUG: 230635
FIXED-IN: 4.13
REVIEW: 113254